# Keivotos-test

./: .editorconfig  .gitattributes  .gitignore  CONTRIBUTING.md  NOTICE  README.md  READMEold.md  SECURITY.md  THIRD_PARTY_NOTICES.md  app.py  config.json  pyproject.toml  run.bat
.github/: CODE_OF_CONDUCT.md  CONTRIBUTING.md  SECURITY.md  SUPPORT.md  pull_request_template.md
Waifu-Hoard-Hoarder/: README.md  app.py  config.json
backend/: automation.py  backup_bundle.py  config.py  core.py  credentials.py  database.py  local_recovery.py  models.py  product.py  requirements.txt  runtime_logging.py  schema.py  security.py  server.py  storage_layout.py  tag_history.py  thumbnails.py
docs/: project-direction.md
frontend/: README.md  index.html  package-lock.json  package.json  svelte.config.js  tsconfig.app.json  tsconfig.node.json  vite.config.ts
scripts/: benchmark_library.py  danbooru_gallery_dl.py  init_metadata_db.py  openapi_snapshot.py  windows_folder_picker.py
tests/: __init__.py  test_acquisition.py  test_automation.py  test_backup_bundle.py  test_beta_import.py  test_filename_search.py  test_folder_picker.py  test_folder_removal.py  test_folder_roots.py  test_frontend_delivery.py  test_home_discovery.py  test_images_golden.py  test_import_phases.py  test_local_recovery.py  test_openapi_snapshot.py  test_regression_fixes.py  test_release_layout.py  test_schema.py  test_security.py  test_settings_motion_contract.py  test_sidebar_grip_contract.py  test_storage_layout.py  test_tag_history.py  test_thumbnails.py  test_tool_progress.py  test_view_navigation.py
(+72 files in other folders)
