[project]
name = "keivotos"
version = "1.0.0"
description = "Local-first personal media archive suite, beginning with Waifu-Hoard."
readme = "README.md"
requires-python = "==3.11.*"
license = "Apache-2.0"
dependencies = [
  "aiosqlite==0.22.1",
  "fastapi==0.139.0",
  "gallery-dl==1.32.6",
  "imageio-ffmpeg==0.6.0",
  "pillow==12.3.0",
  "uvicorn[standard]==0.51.0",
]

[dependency-groups]
build = [
  "pyinstaller==6.21.0",
]

[tool.uv]
package = false
